fix build problem